@@ -522,10 +522,13 @@ public class DcSensitivityAnalysis extends AbstractSensitivityAnalysis<DcVariabl
 
         network.getVariantManager().setWorkingVariant(workingVariantId);
 
+        checkVariableSet(variableSets);
+        checkContingencies(contingencies);
+
         LoadFlowParameters lfParameters = parameters.getLoadFlowParameters();
         OpenLoadFlowParameters lfParametersExt = OpenLoadFlowParameters.get(lfParameters);
 
-        Stopwatch stopwatch = Stopwatch.createStarted();
+        checkLoadFlowParameters(lfParameters);
 
         // create the network (we only manage main connected component)
         SlackBusSelector slackBusSelector = SlackBusSelector.fromMode(lfParametersExt.getSlackBusSelectionMode(),
@@ -580,205 +583,211 @@ public class DcSensitivityAnalysis extends AbstractSensitivityAnalysis<DcVariabl
                 .setReferenceBusSelector(ReferenceBusSelector.DEFAULT_SELECTOR) // not supported yet
                 .setIncludeElementsReconnectingSmallComponents(false); // FIXME does not work yet with woodbury
 
+        var dcLoadFlowParameters = createDcLoadFlowParameters(lfNetworkParameters, matrixFactory, lfParameters, lfParametersExt);
+
         // create networks including all necessary switches
         try (LfNetworkList lfNetworks = Networks.loadWithReconnectableElements(network, topoConfig, lfNetworkParameters, sensiReportNode)) {
             LfNetwork lfNetwork = lfNetworks.getLargest().orElseThrow(() -> new PowsyblException("Empty network"));
 
-            checkVariableSet(variableSets);
-            checkContingencies(contingencies);
-
-            cleanContingencies(lfNetwork, propagatedContingencies);
-            checkLoadFlowParameters(lfParameters);
-
-            Map<String, Action> actionsById = Actions.indexById(actions);
-            Map<String, List<Indexed<OperatorStrategy>>> operatorStrategiesByContingencyId =
-                    OperatorStrategies.indexByContingencyId(propagatedContingencies, operatorStrategies, actionsById, true);
-            Set<Action> neededActions = OperatorStrategies.getNeededActions(operatorStrategiesByContingencyId, actionsById);
-            Map<String, LfAction> lfActionById = LfActionUtils.createLfActions(lfNetwork, neededActions, network); // only convert needed actions
-
-            Map<String, SensitivityVariableSet> variableSetsById = variableSets.stream().collect(Collectors.toMap(SensitivityVariableSet::getId, Function.identity()));
-            SensitivityFactorHolder<DcVariableType, DcEquationType> allFactorHolder = readAndCheckFactors(network, variableSetsById, factorReader, lfNetwork, breakers);
-            List<LfSensitivityFactor<DcVariableType, DcEquationType>> allLfFactors = allFactorHolder.getAllFactors();
-
-            allLfFactors.stream()
-                    .filter(lfFactor -> lfFactor.getFunctionType() != SensitivityFunctionType.BRANCH_ACTIVE_POWER_1
-                                && lfFactor.getFunctionType() != SensitivityFunctionType.BRANCH_ACTIVE_POWER_2
-                                && lfFactor.getFunctionType() != SensitivityFunctionType.BRANCH_ACTIVE_POWER_3
-                            || lfFactor.getVariableType() != SensitivityVariableType.INJECTION_ACTIVE_POWER
-                                && lfFactor.getVariableType() != SensitivityVariableType.TRANSFORMER_PHASE
-                                && lfFactor.getVariableType() != SensitivityVariableType.TRANSFORMER_PHASE_1
-                                && lfFactor.getVariableType() != SensitivityVariableType.TRANSFORMER_PHASE_2
-                                && lfFactor.getVariableType() != SensitivityVariableType.TRANSFORMER_PHASE_3
-                                && lfFactor.getVariableType() != SensitivityVariableType.HVDC_LINE_ACTIVE_POWER)
-                    .findFirst()
-                    .ifPresent(ignored -> {
-                        throw new PowsyblException("Only variables of type TRANSFORMER_PHASE, TRANSFORMER_PHASE_1, TRANSFORMER_PHASE_2, " +
-                            "TRANSFORMER_PHASE_3, INJECTION_ACTIVE_POWER and HVDC_LINE_ACTIVE_POWER, and functions of type BRANCH_ACTIVE_POWER_1, " +
-                            "BRANCH_ACTIVE_POWER_2 and BRANCH_ACTIVE_POWER_3 are yet supported in DC");
-                    });
-
-            LOGGER.info("Running DC sensitivity analysis with {} factors, {} contingencies and {} operator strategies",
-                    allLfFactors.size(), contingencies.size(), operatorStrategies.size());
-
-            var dcLoadFlowParameters = createDcLoadFlowParameters(lfNetworkParameters, matrixFactory, lfParameters, lfParametersExt);
-
-            // next we only work with valid factors
-            var validFactorHolder = writeInvalidFactors(allFactorHolder, resultWriter, propagatedContingencies, operatorStrategiesByContingencyId, parameters);
-            var validLfFactors = validFactorHolder.getAllFactors();
-            LOGGER.info("{}/{} factors are valid", validLfFactors.size(), allLfFactors.size());
-
             try (DcLoadFlowContext loadFlowContext = new DcLoadFlowContext(lfNetwork, dcLoadFlowParameters, false)) {
+                analyseNetwork(network, contingencies, variableSets, factorReader, resultWriter, sensiReportNode, lfNetwork,
+                        propagatedContingencies, actions, operatorStrategies, breakers, loadFlowContext, lfParameters, lfParametersExt);
+            }
+        }
+    }
 
-                // create jacobian matrix either using calculated voltages from pre-contingency network or nominal voltages
-                VoltageInitializer voltageInitializer = lfParameters.getVoltageInitMode() == LoadFlowParameters.VoltageInitMode.PREVIOUS_VALUES
-                        ? new PreviousValueVoltageInitializer()
-                        : new UniformValueVoltageInitializer();
+    private void analyseNetwork(Network network, List<Contingency> contingencies, List<SensitivityVariableSet> variableSets,
+                                SensitivityFactorReader factorReader, SensitivityResultWriter resultWriter, ReportNode sensiReportNode,
+                                LfNetwork lfNetwork, List<PropagatedContingency> propagatedContingencies, List<Action> actions,
+                                List<OperatorStrategy> operatorStrategies, boolean breakers, DcLoadFlowContext loadFlowContext,
+                                LoadFlowParameters lfParameters, OpenLoadFlowParameters lfParametersExt) {
+        Stopwatch stopwatch = Stopwatch.createStarted();
 
-                DcLoadFlowEngine.initStateVector(lfNetwork, loadFlowContext.getEquationSystem(), voltageInitializer);
+        cleanContingencies(lfNetwork, propagatedContingencies);
 
-                // index factors by variable group to compute the minimal number of states
-                SensitivityFactorGroupList<DcVariableType, DcEquationType> factorGroups = createFactorGroups(validLfFactors.stream()
-                    .filter(factor -> factor.getStatus() == LfSensitivityFactor.Status.VALID)
-                    .collect(Collectors.toList()));
+        Map<String, Action> actionsById = Actions.indexById(actions);
+        Map<String, List<Indexed<OperatorStrategy>>> operatorStrategiesByContingencyId =
+                OperatorStrategies.indexByContingencyId(propagatedContingencies, operatorStrategies, actionsById, true);
+        Set<Action> neededActions = OperatorStrategies.getNeededActions(operatorStrategiesByContingencyId, actionsById);
+        Map<String, LfAction> lfActionById = LfActionUtils.createLfActions(lfNetwork, neededActions, network); // only convert needed actions
 
-                // compute the participation for each injection factor (+1 on the injection and then -participation factor on all
-                // buses that contain elements participating to slack distribution)
-                List<ParticipatingElement> participatingElements = lfParameters.isDistributedSlack()
-                        ? getParticipatingElements(lfNetwork.getBuses(), lfParameters.getBalanceType(), lfParametersExt)
-                        : Collections.emptyList();
+        Map<String, SensitivityVariableSet> variableSetsById = variableSets.stream().collect(Collectors.toMap(SensitivityVariableSet::getId, Function.identity()));
+        SensitivityFactorHolder<DcVariableType, DcEquationType> allFactorHolder = readAndCheckFactors(network, variableSetsById, factorReader, lfNetwork, breakers);
+        List<LfSensitivityFactor<DcVariableType, DcEquationType>> allLfFactors = allFactorHolder.getAllFactors();
 
-                // run DC loadflow on pre-contingency network
-                DenseMatrix baseFlowStates = calculateFlowStates(loadFlowContext, participatingElements, new DisabledNetwork(), Collections.emptyList(), sensiReportNode);
-                // create workingFlowStates matrix that will be a working copy of baseFlowStates
-                DenseMatrix workingFlowStates = new DenseMatrix(baseFlowStates.getRowCount(), baseFlowStates.getColumnCount());
-
-                // compute the pre-contingency factor states
-                DenseMatrix baseFactorStates = calculateFactorStates(loadFlowContext, factorGroups, participatingElements);
-                // create workingFactorStates matrix that will be a working copy of baseFactorStates
-                DenseMatrix workingFactorStates = new DenseMatrix(baseFactorStates.getRowCount(), baseFactorStates.getColumnCount());
-
-                if (parameters.getOperatorStrategiesCalculationMode() != SensitivityOperatorStrategiesCalculationMode.ONLY_OPERATOR_STRATEGIES) {
-                    // calculate sensitivity values for pre-contingency network
-                    calculateSensitivityValues(validFactorHolder.getFactorsForBaseNetwork(), baseFactorStates, baseFlowStates, null, null, resultWriter, new DisabledNetwork());
-                }
-
-                // filter contingencies without factors
-                List<PropagatedContingency> contingenciesWithFactors = new ArrayList<>();
-                propagatedContingencies.forEach(contingency -> {
-                    List<AbstractSensitivityAnalysis.LfSensitivityFactor<DcVariableType, DcEquationType>> lfFactors = validFactorHolder.getFactorsForContingencies(
-                        List.of(contingency.getContingency().getId()));
-                    if (!lfFactors.isEmpty()) {
-                        contingenciesWithFactors.add(contingency);
-                    } else {
-                        resultWriter.writeStateStatus(contingency.getIndex(), -1, SensitivityAnalysisResult.Status.SUCCESS);
-                    }
+        allLfFactors.stream()
+                .filter(lfFactor -> lfFactor.getFunctionType() != SensitivityFunctionType.BRANCH_ACTIVE_POWER_1
+                            && lfFactor.getFunctionType() != SensitivityFunctionType.BRANCH_ACTIVE_POWER_2
+                            && lfFactor.getFunctionType() != SensitivityFunctionType.BRANCH_ACTIVE_POWER_3
+                        || lfFactor.getVariableType() != SensitivityVariableType.INJECTION_ACTIVE_POWER
+                            && lfFactor.getVariableType() != SensitivityVariableType.TRANSFORMER_PHASE
+                            && lfFactor.getVariableType() != SensitivityVariableType.TRANSFORMER_PHASE_1
+                            && lfFactor.getVariableType() != SensitivityVariableType.TRANSFORMER_PHASE_2
+                            && lfFactor.getVariableType() != SensitivityVariableType.TRANSFORMER_PHASE_3
+                            && lfFactor.getVariableType() != SensitivityVariableType.HVDC_LINE_ACTIVE_POWER)
+                .findFirst()
+                .ifPresent(ignored -> {
+                    throw new PowsyblException("Only variables of type TRANSFORMER_PHASE, TRANSFORMER_PHASE_1, TRANSFORMER_PHASE_2, " +
+                        "TRANSFORMER_PHASE_3, INJECTION_ACTIVE_POWER and HVDC_LINE_ACTIVE_POWER, and functions of type BRANCH_ACTIVE_POWER_1, " +
+                        "BRANCH_ACTIVE_POWER_2 and BRANCH_ACTIVE_POWER_3 are yet supported in DC");
                 });
 
-                // compute states with +1 -1 to model the contingencies and run connectivity analysis
-                ConnectivityBreakAnalysis.ConnectivityBreakAnalysisResults connectivityBreakAnalysisResults = ConnectivityBreakAnalysis.run(loadFlowContext, contingenciesWithFactors);
+        LOGGER.info("Running DC sensitivity analysis with {} factors, {} contingencies and {} operator strategies",
+                allLfFactors.size(), contingencies.size(), operatorStrategies.size());
 
-                // create HVDC AC emulation contingency elements for HVDCs with droop control in the contingency list
-                Map<String, ComputedHvdcAcEmulationElement> contingencyElementByHvdc = contingenciesWithFactors.stream()
-                        .flatMap(c -> c.getHvdcIdsToOpen().stream())
-                        .distinct()
-                        .map(lfNetwork::getHvdcById)
-                        .filter(hvdc -> hvdc != null && hvdc.isAcEmulation())
-                        .collect(Collectors.toMap(LfHvdc::getId, hvdc -> new ComputedHvdcAcEmulationElement(hvdc, loadFlowContext.getEquationSystem()), (a, b) -> a, LinkedHashMap::new));
+        // next we only work with valid factors
+        var validFactorHolder = writeInvalidFactors(allFactorHolder, resultWriter, propagatedContingencies, operatorStrategiesByContingencyId, parameters);
+        var validLfFactors = validFactorHolder.getAllFactors();
+        LOGGER.info("{}/{} factors are valid", validLfFactors.size(), allLfFactors.size());
 
-                // compute HVDC contingency states and concatenate with branch states into a combined matrix
-                DenseMatrix contingenciesStates;
-                if (contingencyElementByHvdc.isEmpty()) {
-                    contingenciesStates = connectivityBreakAnalysisResults.contingenciesStates();
-                } else {
-                    // calculateElementsStates requires dense 0-based indices to size and fill its own states matrix
-                    ComputedElement.setComputedElementIndexes(contingencyElementByHvdc.values());
-                    DenseMatrix hvdcStates = ComputedElement.calculateElementsStates(loadFlowContext, contingencyElementByHvdc.values());
-                    contingenciesStates = concatenateStates(connectivityBreakAnalysisResults.contingenciesStates(), hvdcStates);
-                    // shift HVDC element indices after the branch element indices so both share the concatenated states matrix
-                    int hvdcStartIndex = connectivityBreakAnalysisResults.contingencyElementByBranch().size();
-                    contingencyElementByHvdc.values().forEach(e -> e.setComputedElementIndex(hvdcStartIndex + e.getComputedElementIndex()));
-                }
+        // create jacobian matrix either using calculated voltages from pre-contingency network or nominal voltages
+        VoltageInitializer voltageInitializer = lfParameters.getVoltageInitMode() == LoadFlowParameters.VoltageInitMode.PREVIOUS_VALUES
+                ? new PreviousValueVoltageInitializer()
+                : new UniformValueVoltageInitializer();
 
-                // the map is indexed by lf actions as different kind of actions can be given on the same branch
-                Map<LfAction, List<ComputedElement>> actionElementsIndexByLfAction = ComputedElement.createActionElementsIndexByLfAction(lfActionById, loadFlowContext.getEquationSystem());
+        DcLoadFlowEngine.initStateVector(lfNetwork, loadFlowContext.getEquationSystem(), voltageInitializer);
 
-                // compute states with +1 -1 to model the actions in Woodbury engine
-                // note that the number of columns in the matrix depends on the number of distinct branches affected by the action elements
-                DenseMatrix actionsStates = ComputedElement.calculateElementsStates(loadFlowContext, actionElementsIndexByLfAction.values().stream().flatMap(Collection::stream).toList());
+        // index factors by variable group to compute the minimal number of states
+        SensitivityFactorGroupList<DcVariableType, DcEquationType> factorGroups = createFactorGroups(validLfFactors.stream()
+            .filter(factor -> factor.getStatus() == LfSensitivityFactor.Status.VALID)
+            .collect(Collectors.toList()));
 
-                if (parameters.getOperatorStrategiesCalculationMode() != SensitivityOperatorStrategiesCalculationMode.ONLY_OPERATOR_STRATEGIES) {
-                    LOGGER.info("Processing contingencies with no connectivity break");
+        // compute the participation for each injection factor (+1 on the injection and then -participation factor on all
+        // buses that contain elements participating to slack distribution)
+        List<ParticipatingElement> participatingElements = lfParameters.isDistributedSlack()
+                ? getParticipatingElements(lfNetwork.getBuses(), lfParameters.getBalanceType(), lfParametersExt)
+                : Collections.emptyList();
 
-                    // process contingencies with no connectivity break
-                    operatorStrategiesSensitivityCalculation(connectivityBreakAnalysisResults.nonBreakingConnectivityAnalysisResults(), workingFlowStates,
-                        workingFactorStates, baseFlowStates, baseFactorStates, loadFlowContext, lfParameters, lfParametersExt,
-                        validFactorHolder, factorGroups, participatingElements, connectivityBreakAnalysisResults,
-                        actionElementsIndexByLfAction, contingencyElementByHvdc, contingenciesStates, actionsStates, resultWriter, sensiReportNode, stopwatch);
+        // run DC loadflow on pre-contingency network
+        DenseMatrix baseFlowStates = calculateFlowStates(loadFlowContext, participatingElements, new DisabledNetwork(), Collections.emptyList(), sensiReportNode);
+        // create workingFlowStates matrix that will be a working copy of baseFlowStates
+        DenseMatrix workingFlowStates = new DenseMatrix(baseFlowStates.getRowCount(), baseFlowStates.getColumnCount());
 
-                    LOGGER.info("Processing contingencies with connectivity break");
+        // compute the pre-contingency factor states
+        DenseMatrix baseFactorStates = calculateFactorStates(loadFlowContext, factorGroups, participatingElements);
+        // create workingFactorStates matrix that will be a working copy of baseFactorStates
+        DenseMatrix workingFactorStates = new DenseMatrix(baseFactorStates.getRowCount(), baseFactorStates.getColumnCount());
 
-                    // process contingencies with connectivity break
-                    operatorStrategiesSensitivityCalculation(connectivityBreakAnalysisResults.connectivityBreakingAnalysisResults(), workingFlowStates,
-                        workingFactorStates, baseFlowStates, baseFactorStates, loadFlowContext, lfParameters, lfParametersExt,
-                        validFactorHolder, factorGroups, participatingElements, connectivityBreakAnalysisResults,
-                        actionElementsIndexByLfAction, contingencyElementByHvdc, contingenciesStates, actionsStates, resultWriter, sensiReportNode, stopwatch);
-                }
+        if (parameters.getOperatorStrategiesCalculationMode() != SensitivityOperatorStrategiesCalculationMode.ONLY_OPERATOR_STRATEGIES) {
+            // calculate sensitivity values for pre-contingency network
+            calculateSensitivityValues(validFactorHolder.getFactorsForBaseNetwork(), baseFactorStates, baseFlowStates, null, null, resultWriter, new DisabledNetwork());
+        }
 
-                // process operator strategies
-                if (parameters.getOperatorStrategiesCalculationMode() != SensitivityOperatorStrategiesCalculationMode.NONE) {
-                    // pre-contingency operator strategies (preventive actions)
-                    List<Indexed<OperatorStrategy>> preContingencyOperatorStrategies = operatorStrategiesByContingencyId.getOrDefault(null, Collections.emptyList());
-                    if (!preContingencyOperatorStrategies.isEmpty()) {
-                        LOGGER.info("Running preventive operator strategies...");
+        // filter contingencies without factors
+        List<PropagatedContingency> contingenciesWithFactors = new ArrayList<>();
+        propagatedContingencies.forEach(contingency -> {
+            List<LfSensitivityFactor<DcVariableType, DcEquationType>> lfFactors = validFactorHolder.getFactorsForContingencies(
+                List.of(contingency.getContingency().getId()));
+            if (!lfFactors.isEmpty()) {
+                contingenciesWithFactors.add(contingency);
+            } else {
+                resultWriter.writeStateStatus(contingency.getIndex(), -1, SensitivityAnalysisResult.Status.SUCCESS);
+            }
+        });
 
-                        for (Indexed<OperatorStrategy> operatorStrategyForBaseCase : preContingencyOperatorStrategies) {
-                            if (Thread.currentThread().isInterrupted()) {
-                                stopwatch.stop();
-                                throw new PowsyblException("Computation was interrupted");
-                            }
-                            workingFlowStates.copyValuesFrom(baseFlowStates);
-                            workingFactorStates.copyValuesFrom(baseFactorStates);
+        // compute states with +1 -1 to model the contingencies and run connectivity analysis
+        ConnectivityBreakAnalysis.ConnectivityBreakAnalysisResults connectivityBreakAnalysisResults = ConnectivityBreakAnalysis.run(loadFlowContext, contingenciesWithFactors);
 
-                            List<String> operatorStrategyActionIds = operatorStrategyForBaseCase.value().getConditionalActions().stream()
-                                .flatMap(conditionalActions -> conditionalActions.getActionIds().stream()).toList();
-                            List<LfAction> operatorStrategyLfActions = operatorStrategyActionIds.stream().map(lfActionById::get).toList();
-                            LfOperatorStrategy lfOperatorStrategy = new LfOperatorStrategy(operatorStrategyForBaseCase, operatorStrategyLfActions);
-                            var postActionsConnectivityAnalysisResult = ConnectivityBreakAnalysis.processPostContingencyAndPostOperatorStrategyConnectivityAnalysisResult(loadFlowContext,
-                                    ConnectivityBreakAnalysis.ConnectivityAnalysisResult.createNonBreakingConnectivityAnalysisResult(null, lfOperatorStrategy, lfNetwork),
-                                    connectivityBreakAnalysisResults.contingencyElementByBranch(),
-                                    connectivityBreakAnalysisResults.contingenciesStates(),
-                                    lfOperatorStrategy,
-                                    actionElementsIndexByLfAction,
-                                    actionsStates);
+        // create HVDC AC emulation contingency elements for HVDCs with droop control in the contingency list
+        Map<String, ComputedHvdcAcEmulationElement> contingencyElementByHvdc = contingenciesWithFactors.stream()
+                .flatMap(c -> c.getHvdcIdsToOpen().stream())
+                .distinct()
+                .map(lfNetwork::getHvdcById)
+                .filter(hvdc -> hvdc != null && hvdc.isAcEmulation())
+                .collect(Collectors.toMap(LfHvdc::getId, hvdc -> new ComputedHvdcAcEmulationElement(hvdc, loadFlowContext.getEquationSystem()), (a, b) -> a, LinkedHashMap::new));
 
-                            processContingencyAndOperatorStrategy(postActionsConnectivityAnalysisResult, loadFlowContext, lfParameters, lfParametersExt,
-                                    validFactorHolder, factorGroups, participatingElements, connectivityBreakAnalysisResults.contingencyElementByBranch(),
-                                    contingencyElementByHvdc, actionElementsIndexByLfAction, workingFlowStates, workingFactorStates, contingenciesStates,
-                                    actionsStates, resultWriter, sensiReportNode);
-                        }
+        // compute HVDC contingency states and concatenate with branch states into a combined matrix
+        DenseMatrix contingenciesStates;
+        if (contingencyElementByHvdc.isEmpty()) {
+            contingenciesStates = connectivityBreakAnalysisResults.contingenciesStates();
+        } else {
+            // calculateElementsStates requires dense 0-based indices to size and fill its own states matrix
+            ComputedElement.setComputedElementIndexes(contingencyElementByHvdc.values());
+            DenseMatrix hvdcStates = ComputedElement.calculateElementsStates(loadFlowContext, contingencyElementByHvdc.values());
+            contingenciesStates = concatenateStates(connectivityBreakAnalysisResults.contingenciesStates(), hvdcStates);
+            // shift HVDC element indices after the branch element indices so both share the concatenated states matrix
+            int hvdcStartIndex = connectivityBreakAnalysisResults.contingencyElementByBranch().size();
+            contingencyElementByHvdc.values().forEach(e -> e.setComputedElementIndex(hvdcStartIndex + e.getComputedElementIndex()));
+        }
+
+        // the map is indexed by lf actions as different kind of actions can be given on the same branch
+        Map<LfAction, List<ComputedElement>> actionElementsIndexByLfAction = ComputedElement.createActionElementsIndexByLfAction(lfActionById, loadFlowContext.getEquationSystem());
+
+        // compute states with +1 -1 to model the actions in Woodbury engine
+        // note that the number of columns in the matrix depends on the number of distinct branches affected by the action elements
+        DenseMatrix actionsStates = ComputedElement.calculateElementsStates(loadFlowContext, actionElementsIndexByLfAction.values().stream().flatMap(Collection::stream).toList());
+
+        if (parameters.getOperatorStrategiesCalculationMode() != SensitivityOperatorStrategiesCalculationMode.ONLY_OPERATOR_STRATEGIES) {
+            LOGGER.info("Processing contingencies with no connectivity break");
+
+            // process contingencies with no connectivity break
+            operatorStrategiesSensitivityCalculation(connectivityBreakAnalysisResults.nonBreakingConnectivityAnalysisResults(), workingFlowStates,
+                workingFactorStates, baseFlowStates, baseFactorStates, loadFlowContext, lfParameters, lfParametersExt,
+                validFactorHolder, factorGroups, participatingElements, connectivityBreakAnalysisResults,
+                actionElementsIndexByLfAction, contingencyElementByHvdc, contingenciesStates, actionsStates, resultWriter, sensiReportNode, stopwatch);
+
+            LOGGER.info("Processing contingencies with connectivity break");
+
+            // process contingencies with connectivity break
+            operatorStrategiesSensitivityCalculation(connectivityBreakAnalysisResults.connectivityBreakingAnalysisResults(), workingFlowStates,
+                workingFactorStates, baseFlowStates, baseFactorStates, loadFlowContext, lfParameters, lfParametersExt,
+                validFactorHolder, factorGroups, participatingElements, connectivityBreakAnalysisResults,
+                actionElementsIndexByLfAction, contingencyElementByHvdc, contingenciesStates, actionsStates, resultWriter, sensiReportNode, stopwatch);
+        }
+
+        // process operator strategies
+        if (parameters.getOperatorStrategiesCalculationMode() != SensitivityOperatorStrategiesCalculationMode.NONE) {
+            // pre-contingency operator strategies (preventive actions)
+            List<Indexed<OperatorStrategy>> preContingencyOperatorStrategies = operatorStrategiesByContingencyId.getOrDefault(null, Collections.emptyList());
+            if (!preContingencyOperatorStrategies.isEmpty()) {
+                LOGGER.info("Running preventive operator strategies...");
+
+                for (Indexed<OperatorStrategy> operatorStrategyForBaseCase : preContingencyOperatorStrategies) {
+                    if (Thread.currentThread().isInterrupted()) {
+                        stopwatch.stop();
+                        throw new PowsyblException("Computation was interrupted");
                     }
+                    workingFlowStates.copyValuesFrom(baseFlowStates);
+                    workingFactorStates.copyValuesFrom(baseFactorStates);
 
-                    LOGGER.info("Running operator strategies connectivity analysis...");
-                    Stopwatch operatorStrategyStopwatch = Stopwatch.createStarted();
-                    List<ConnectivityBreakAnalysis.ConnectivityAnalysisResult> postActionsConnectivityAnalysisResults = runOperatorStrategiesConnectivityAnalysis(
-                        connectivityBreakAnalysisResults, loadFlowContext, operatorStrategiesByContingencyId, lfActionById,
-                        actionElementsIndexByLfAction, actionsStates, stopwatch);
-                    operatorStrategyStopwatch.stop();
-                    LOGGER.info("Operator strategies connectivity analysis done in {} ms", operatorStrategyStopwatch.elapsed(TimeUnit.MILLISECONDS));
+                    List<String> operatorStrategyActionIds = operatorStrategyForBaseCase.value().getConditionalActions().stream()
+                        .flatMap(conditionalActions -> conditionalActions.getActionIds().stream()).toList();
+                    List<LfAction> operatorStrategyLfActions = operatorStrategyActionIds.stream().map(lfActionById::get).toList();
+                    LfOperatorStrategy lfOperatorStrategy = new LfOperatorStrategy(operatorStrategyForBaseCase, operatorStrategyLfActions);
+                    var postActionsConnectivityAnalysisResult = ConnectivityBreakAnalysis.processPostContingencyAndPostOperatorStrategyConnectivityAnalysisResult(loadFlowContext,
+                            ConnectivityBreakAnalysis.ConnectivityAnalysisResult.createNonBreakingConnectivityAnalysisResult(null, lfOperatorStrategy, lfNetwork),
+                            connectivityBreakAnalysisResults.contingencyElementByBranch(),
+                            connectivityBreakAnalysisResults.contingenciesStates(),
+                            lfOperatorStrategy,
+                            actionElementsIndexByLfAction,
+                            actionsStates);
 
-                    LOGGER.info("Running operator strategies sensitivity calculation...");
-                    operatorStrategyStopwatch.reset().start();
-                    operatorStrategiesSensitivityCalculation(postActionsConnectivityAnalysisResults, workingFlowStates,
-                        workingFactorStates, baseFlowStates, baseFactorStates, loadFlowContext, lfParameters, lfParametersExt,
-                        validFactorHolder, factorGroups, participatingElements, connectivityBreakAnalysisResults,
-                        actionElementsIndexByLfAction, contingencyElementByHvdc, contingenciesStates, actionsStates, resultWriter, sensiReportNode, stopwatch);
-                    LOGGER.info("Operator strategies sensitivity calculation done in {} ms", operatorStrategyStopwatch.elapsed(TimeUnit.MILLISECONDS));
+                    processContingencyAndOperatorStrategy(postActionsConnectivityAnalysisResult, loadFlowContext, lfParameters, lfParametersExt,
+                            validFactorHolder, factorGroups, participatingElements, connectivityBreakAnalysisResults.contingencyElementByBranch(),
+                            contingencyElementByHvdc, actionElementsIndexByLfAction, workingFlowStates, workingFactorStates, contingenciesStates,
+                            actionsStates, resultWriter, sensiReportNode);
                 }
             }
 
-            stopwatch.stop();
-            LOGGER.info("DC sensitivity analysis done in {} ms", stopwatch.elapsed(TimeUnit.MILLISECONDS));
+            LOGGER.info("Running operator strategies connectivity analysis...");
+            Stopwatch operatorStrategyStopwatch = Stopwatch.createStarted();
+            List<ConnectivityBreakAnalysis.ConnectivityAnalysisResult> postActionsConnectivityAnalysisResults = runOperatorStrategiesConnectivityAnalysis(
+                connectivityBreakAnalysisResults, loadFlowContext, operatorStrategiesByContingencyId, lfActionById,
+                actionElementsIndexByLfAction, actionsStates, stopwatch);
+            operatorStrategyStopwatch.stop();
+            LOGGER.info("Operator strategies connectivity analysis done in {} ms", operatorStrategyStopwatch.elapsed(TimeUnit.MILLISECONDS));
+
+            LOGGER.info("Running operator strategies sensitivity calculation...");
+            operatorStrategyStopwatch.reset().start();
+            operatorStrategiesSensitivityCalculation(postActionsConnectivityAnalysisResults, workingFlowStates,
+                workingFactorStates, baseFlowStates, baseFactorStates, loadFlowContext, lfParameters, lfParametersExt,
+                validFactorHolder, factorGroups, participatingElements, connectivityBreakAnalysisResults,
+                actionElementsIndexByLfAction, contingencyElementByHvdc, contingenciesStates, actionsStates, resultWriter, sensiReportNode, stopwatch);
+            LOGGER.info("Operator strategies sensitivity calculation done in {} ms", operatorStrategyStopwatch.elapsed(TimeUnit.MILLISECONDS));
         }
+
+        stopwatch.stop();
+        LOGGER.info("DC sensitivity analysis done in {} ms", stopwatch.elapsed(TimeUnit.MILLISECONDS));
     }
 
     private List<ConnectivityBreakAnalysis.ConnectivityAnalysisResult> runOperatorStrategiesConnectivityAnalysis(
